--- a/css/main.css
+++ b/css/main.css
@@ -1,16 +1,45 @@
 @charset "UTF-8";
-html, body {
-  width: 100%;
+
+html,
+body {
   height: 100%;
-  display: flex;
-  justify-content: center;
   font-family: "Nunito", sans-serif;
   background-color: rgb(15, 14, 19);
   color: #fff;
   -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  background-image: url('../img/bg.png');
+}
+
+.navbar-light .navbar-nav .active>.nav-link,
+.navbar-light .navbar-nav .nav-link.active,
+.navbar-light .navbar-nav .nav-link.show,
+.navbar-light .navbar-nav .show>.nav-link {
+  color: rgb(255 255 255 / 90%);
+  font-weight: 600;
+}
+
+.navbar-light .navbar-nav .nav-link {
+  color: rgb(255 255 255 / 90%);
+  font-weight: 600;
+}
+
+.navbar-light .navbar-brand:focus,
+.navbar-light .navbar-brand:hover {
+  color: rgba(255, 255, 255, 0.9);
+}
+
+.navbar-light .navbar-brand {
+  color: rgb(255 255 255 / 90%);
+  font-weight: bold;
+}
+
+
+.bg-light {
+  background-color: #7286ff !important;
+  width: 100%;
 }
 
 #form-wrapper {
@@ -24,11 +53,13 @@ form {
   width: 90%;
   max-width: 50%;
 }
+
 form #form-title {
   margin-top: 0;
   font-weight: 400;
   text-align: center;
 }
+
 form #debt-amount-slider {
   display: flex;
   flex-direction: row;
@@ -37,10 +68,11 @@ form #debt-amount-slider {
   width: 100%;
   height: 50px;
   -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
+
 form #debt-amount-slider::before {
   content: " ";
   position: absolute;
@@ -52,25 +84,29 @@ form #debt-amount-slider::before {
   transform: translate(-50%, -50%);
   background: #fff;
 }
-form #debt-amount-slider input, form #debt-amount-slider label {
+
+form #debt-amount-slider input,
+form #debt-amount-slider label {
   box-sizing: border-box;
   flex: 1;
   -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
   cursor: pointer;
 }
+
 form #debt-amount-slider label {
   display: inline-block;
   position: relative;
   width: 20%;
   height: 100%;
   -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
+
 form #debt-amount-slider label::before {
   content: attr(data-debt-amount);
   position: absolute;
@@ -84,6 +120,7 @@ form #debt-amount-slider label::before {
   opacity: 0.85;
   transition: all 0.15s ease-in-out;
 }
+
 form #debt-amount-slider label::after {
   content: " ";
   position: absolute;
@@ -97,45 +134,56 @@ form #debt-amount-slider label::after {
   border-radius: 50%;
   pointer-events: none;
   -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
   z-index: 1;
   cursor: pointer;
   transition: all 0.15s ease-in-out;
 }
+
 form #debt-amount-slider label:hover::after {
   transform: translate(-50%, -50%) scale(1.25);
 }
+
 form #debt-amount-slider input {
   display: none;
 }
-form #debt-amount-slider input:checked + label::before {
+
+form #debt-amount-slider input:checked+label::before {
   font-weight: 800;
   opacity: 1;
 }
-form #debt-amount-slider input:checked + label::after {
+
+form #debt-amount-slider input:checked+label::after {
   border-width: 4px;
   transform: translate(-50%, -50%) scale(0.75);
 }
-form #debt-amount-slider input:checked ~ #debt-amount-pos {
+
+form #debt-amount-slider input:checked~#debt-amount-pos {
   opacity: 1;
 }
-form #debt-amount-slider input:checked:nth-child(1) ~ #debt-amount-pos {
+
+form #debt-amount-slider input:checked:nth-child(1)~#debt-amount-pos {
   left: 10%;
 }
-form #debt-amount-slider input:checked:nth-child(3) ~ #debt-amount-pos {
+
+form #debt-amount-slider input:checked:nth-child(3)~#debt-amount-pos {
   left: 30%;
 }
-form #debt-amount-slider input:checked:nth-child(5) ~ #debt-amount-pos {
+
+form #debt-amount-slider input:checked:nth-child(5)~#debt-amount-pos {
   left: 50%;
 }
-form #debt-amount-slider input:checked:nth-child(7) ~ #debt-amount-pos {
+
+form #debt-amount-slider input:checked:nth-child(7)~#debt-amount-pos {
   left: 70%;
 }
-form #debt-amount-slider input:checked:nth-child(9) ~ #debt-amount-pos {
+
+form #debt-amount-slider input:checked:nth-child(9)~#debt-amount-pos {
   left: 90%;
 }
+
 form #debt-amount-slider #debt-amount-pos {
   display: block;
   position: absolute;
@@ -150,22 +198,25 @@ form #debt-amount-slider #debt-amount-pos {
   opacity: 0;
   z-index: 2;
 }
-form:valid #debt-amount-slider input + label::before {
+
+form:valid #debt-amount-slider input+label::before {
   transform: translate(-50%, 45px) scale(0.9);
   transition: all 0.15s linear;
 }
-form:valid #debt-amount-slider input:checked + label::before {
+
+form:valid #debt-amount-slider input:checked+label::before {
   transform: translate(-50%, 45px) scale(1.1);
   transition: all 0.15s linear;
 }
-form + button {
+
+form+button {
   display: block;
   position: relative;
   margin: 56px auto 0;
   padding: 10px 20px;
   -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none;
+  -moz-appearance: none;
+  appearance: none;
   transition: all 0.15s ease-in-out;
   font-family: inherit;
   font-size: 24px;
@@ -175,29 +226,34 @@ form + button {
   border-radius: 8px;
   outline: 0;
   -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
   cursor: pointer;
 }
-form + button:hover {
+
+form+button:hover {
   background: #000;
   color: #fff;
 }
-form + button:hover:active {
+
+form+button:hover:active {
   transform: scale(0.9);
 }
-form + button:focus {
+
+form+button:focus {
   background: #4caf50;
   border-color: #4caf50;
   color: #fff;
   pointer-events: none;
 }
-form + button:focus::before {
+
+form+button:focus::before {
   -webkit-animation: spin 1s linear infinite;
-          animation: spin 1s linear infinite;
+  animation: spin 1s linear infinite;
 }
-form + button::before {
+
+form+button::before {
   display: inline-block;
   width: 0;
   opacity: 0;
@@ -207,7 +263,8 @@ form + button::before {
   margin-right: 0;
   transform: rotate(0deg);
 }
-form:invalid + button {
+
+form:invalid+button {
   pointer-events: none;
   opacity: 0.25;
 }
@@ -219,6 +276,7 @@ form:invalid + button {
     opacity: 1;
     margin-right: 12px;
   }
+
   to {
     transform: rotate(360deg);
     width: 24px;
@@ -234,6 +292,7 @@ form:invalid + button {
     opacity: 1;
     margin-right: 12px;
   }
+
   to {
     transform: rotate(360deg);
     width: 24px;
